--- a/app/views/common/_sidebar.html.haml
+++ b/app/views/common/_sidebar.html.haml
@@ -4,6 +4,7 @@
       %li.header 管理 Panel
       - if current_user.admin?
         %li= link_to '新增使用者', new_user_registration_path
+        %li= link_to '客訴單清單', admin_root_path
       - if current_user.customer?
         %li= link_to '新增客訴單', new_customer_service_request_path
         %li= link_to '客訴單清單', customer_root_path
