--- a/app/views/service_requests/_show.html.haml
+++ b/app/views/service_requests/_show.html.haml
@@ -47,3 +47,27 @@
       .box-body
         - @service_request.attachments.each do |attachment|
           = link_to File.basename(attachment.file.path), attachment.file.url
+.row
+  .col-md-10
+    .box
+      .box-body
+        = simple_form_for [@service_request, Comment.new] do |f|
+          .row
+            .col-md-10
+              = f.input :body, input_html: {class: 'form-control', rows: 6}, label: false
+            .col-md-2
+              = f.button :submit, class: 'btn btn-warning'
+.row
+  .col-md-10
+    .box
+      .box-header.with-border
+        Comments
+      .box-body
+        - @comments.each do |comment|
+          .row
+            .col-md-2
+              .name= "#{comment.user.username} 回覆："
+              .time= comment.created_at.localtime
+            .col-md-10
+              .well
+                = comment.body
