--- a/app/assets/stylesheets/common/simple_form.sass
+++ b/app/assets/stylesheets/common/simple_form.sass
@@ -13,3 +13,9 @@
     border-top: 1px solid #3c3c3c
     margin-top: 15px
     padding-top: 15px
+  .check_boxes
+    label
+      display: block
+    .checkbox
+      display: inline-block
+      margin-right: 10px
