--- a/app/views/service_requests/_show.html.haml
+++ b/app/views/service_requests/_show.html.haml
@@ -34,6 +34,32 @@
   .col-md-10
     .box
       .box-header.with-border
+        Assignments
+      .box-body
+        .row
+          - if @service_request.assignments != []
+            - @service_request.assignments.each do |a|
+              .col-md-3
+                .info-box-icon.bg-aqua
+                  %i.fa.fa-user
+                .info-box-content
+                  .username= "Name: #{a.user.username}"
+                  .role
+                    = "Role: #{a.user.role_list.first}"
+          - else
+            .col-md-3 未指派任何人員
+        - if current_user.admin?
+          %hr
+          = '# 警告！ 過度經常的變動會造成工作指派的混亂'
+          .row
+            .col-md-12.assignment-form
+              = simple_form_for [current_user, @service_request], url: update_assignment_admin_service_request_path(@service_request), method: 'POST', label: false do |f|
+                = f.association :responsibles, as: :check_boxes, label_method: :username, collection: User.admins + User.sales + User.teches, include_hidden: false, label: 'Change assignment'
+                = f.button :submit, 'Update Assignment'
+.row
+  .col-md-10
+    .box
+      .box-header.with-border
         Photos
       .box-body
         - @service_request.images.each do |image|
