--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -14,6 +14,7 @@
               %th 客訴種類
               %th 期限
               %th 狀態
+              %th 指派人員數
               %th 操作
           %tbody
             - service_requests.each do |sr|
@@ -23,6 +24,7 @@
                 %td= sr.category.title
                 %td= sr.deadline
                 %td= sr.state
+                %td= sr.assignments.count
                 %td
                   = link_to '查看細節', [role, sr]
                   / = link_to '修改', edit_customer_service_request_path(sr)
