--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -27,7 +27,8 @@
                 %td= sr.assignments.count
                 %td
                   = link_to '查看細節', [role, sr]
-                  / = link_to '修改', edit_customer_service_request_path(sr)
+                  - if current_user.customer?
+                    = link_to '修改', edit_customer_service_request_path(sr)
 
                 / %td= link_to '編輯', edit_manager_princess_path(princess)
                 / %td= link_to '刪除', manager_princess_path(princess), method: :delete, data: { confirm: 'Are you sure?' }
