--- a/app/views/customer/service_requests/_form.html.haml
+++ b/app/views/customer/service_requests/_form.html.haml
@@ -1,11 +1,10 @@
 .row
   .col-sm-5.col-sm-offset-1
     = simple_form_for [:customer, service_request] do |f|
-      = f.input :title, input_html: {class: 'form-control'}
+      = f.input :title, input_html: {class: 'form-control'}, required: true
       = f.association :category, include_hidden: false, include_blank: false, input_html: {class: 'form-control'}
-      = f.input :description,as: :text, input_html: {class: 'form-control', rows: 10}
-      = f.input :deadline, as: :date_time_picker, input_html: {class: 'form-control col-md-3 datepicker'}
-      / .inline-picker
+      = f.input :description,as: :text, input_html: {class: 'form-control', rows: 10}, required: true
+      = f.input :deadline, as: :date_time_picker, input_html: {class: 'form-control col-md-3 datepicker'}, required: true
       %h4 Upload Images
       #images
         = f.simple_fields_for :images do |image|
