--- a/app/views/customer/service_requests/_image_fields.html.haml
+++ b/app/views/customer/service_requests/_image_fields.html.haml
@@ -1,3 +1,4 @@
 .nested-fields.well
   = link_to_remove_association icon("remove"), f
-  = f.input :file, label: false
+  = image_tag f.object.file_path
+  = f.input :file_path, label: false
