--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,12 +2,9 @@
   .col-sm-4.col-sm-offset-4
     %h1.text-center Sign Up
     %hr/
-    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-      = devise_error_messages!
+    = simple_form_for User.new do |f|
       = f.input :username, input_html: {class: 'form-control'}
       = f.input :password, input_html: {class: 'form-control'}
-      = f.input :password_contirmation, input_html: {class: 'form-control'}
+      = f.input :password_confirmation, input_html: {class: 'form-control'}
       = f.input :role, as: :radio_buttons, collection: [:admin, :sales, :tech, :customer], checked: :sales
       = f.button :submit, 'Sign Up'
-    .text-center
-      = render "devise/shared/links"
