--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -10,25 +10,26 @@
           %thead
             %tr
               %th 單號
+              %th 客戶名稱
               %th 標題
               %th 客訴種類
               %th 期限
               %th 狀態
               %th 指派人員數
+              %th 留言回覆數
               %th 操作
           %tbody
             - service_requests.each do |sr|
               %tr
                 %td= sr.id[0..7]
+                %td= sr.customer.username
                 %td= sr.title
                 %td= sr.category.title
                 %td= sr.deadline
                 %td= sr.state
-                %td= sr.assignments.count
+                %td= sr.assignments.blank? ? '未指派人員' : sr.assignments.count
+                %td= sr.comments.blank? ? '無留言' : "#{sr.comments.count} 則"
                 %td
                   = link_to '查看細節', [role, sr]
                   - if current_user.customer?
                     = link_to '修改', edit_customer_service_request_path(sr)
-
-                / %td= link_to '編輯', edit_manager_princess_path(princess)
-                / %td= link_to '刪除', manager_princess_path(princess), method: :delete, data: { confirm: 'Are you sure?' }
