--- a/app/views/admin/staffs/index.html.haml
+++ b/app/views/admin/staffs/index.html.haml
@@ -2,13 +2,13 @@
   .col-md-12
     .box
       .box-header.with-border 
-        %strong 管理員名單
+        %strong= t('admin_list')
       .box-body
         %table.table.table-bordered
           %thead
             %tr
-              %th 姓名
-              %th 註冊日期
+              %th= t('name')
+              %th= t('register_date')
           %tbody
             - @admins.each do |admin|
               %tr
@@ -18,15 +18,15 @@
   .col-md-12
     .box
       .box-header.with-border 
-        %strong 業務人員名單
+        %strong= t('sales_list')
       .box-body
         %table.table.table-bordered
           %thead
             %tr
-              %th 姓名
-              %th 客訴單數量
-              %th 客訴單
-              %th 註冊日期
+              %th= t('name')
+              %th= t('requests_amount')
+              %th= t('requests')
+              %th= t('register_date')
           %tbody
             - @sales.each do |sales|
               %tr
@@ -36,21 +36,21 @@
                   %ul.nav.nav-stacked
                     - sales.assigned_service_requests.each do |s|
                       %li
-                        = link_to "客訴單標題： #{s.title}, 狀態：#{s.state}", admin_service_request_path(s)
+                        = link_to "#{t('service_request.title')}： #{s.title}, #{t('service_request.state')}：#{s.state}", admin_service_request_path(s)
                 %td= sales.created_at.to_s(:simple_date)
 .row
   .col-md-12
     .box
       .box-header.with-border 
-        %strong 技師名單
+        %strong= t('tech_list')
       .box-body
         %table.table.table-bordered
           %thead
             %tr
-              %th 姓名
-              %th 客訴單數量
-              %th 客訴單
-              %th 註冊日期
+              %th= t('name')
+              %th= t('requests_amount')
+              %th= t('requests')
+              %th= t('register_date')
           %tbody
             - @teches.each do |tech|
               %tr
@@ -60,5 +60,5 @@
                   %ul.nav.nav-stacked
                     - tech.assigned_service_requests.each do |s|
                       %li
-                        = link_to "客訴單標題： #{s.title}, 狀態：#{s.state}", admin_service_request_path(s)
+                        = link_to "#{t('service_request.title')}： #{s.title}, #{t('service_request.state')}：#{s.state}", admin_service_request_path(s)
                 %td= tech.created_at.to_s(:simple_date)
