--- a/app/views/common/_navigation.html.haml
+++ b/app/views/common/_navigation.html.haml
@@ -1,20 +1,22 @@
 .main-header
-  .logo Service System
+  .logo= t('service_system')
   %nav.navbar.navbar-fixed-top(role='navigation')
     %a.sidebar-toggle(href='#' data-toggle='offcanvas' role='button')
     .collapse.navbar-collapse.navbar-custom-menu
       %span.sr-only Toggle navigation
       %ul.nav.navbar-nav
-        / - if !user_signed_in?
-        /   %li= link_to '登入', new_user_session_path
+        - if I18n.locale != :'zh-TW'
+          %li= link_to '中文', set_locale_home_index_path(locale: 'zh-TW')
+        - if I18n.locale != :en
+          %li= link_to 'English', set_locale_home_index_path(locale: :en)
         - if user_signed_in?
           - if current_user.admin?
-            %li= link_to '註冊新用戶', new_user_path
-          - if current_user.sales? || current_user.tech?
-            %li= link_to '員工後台', '#'
+            %li= link_to t('hello'), new_user_path
+          / - if current_user.sales? || current_user.tech?
+          /   %li= link_to '員工後台', '#'
           %li.dropdown
             %a.dropdown-toggle(href="#" data-toggle="dropdown" role="button" aria-expanded="false")
               = current_user.username
               %span.caret
             %ul.dropdown-menu.pull-right(role="menu")
-              %li= link_to '登出', destroy_user_session_path, method: 'DELETE'
+              %li= link_to t('sign_out'), destroy_user_session_path, method: 'DELETE'
