--- a/app/views/customer/service_requests/_form.html.haml
+++ b/app/views/customer/service_requests/_form.html.haml
@@ -5,23 +5,23 @@
       = f.association :category, include_hidden: false, include_blank: false, input_html: {class: 'form-control'}
       = f.input :description,as: :text, input_html: {class: 'form-control', rows: 10}, required: true
       = f.input :deadline, as: :date_time_picker, input_html: {class: 'form-control col-md-3 datepicker'}, required: true
-      %h4 Upload Images
+      %h4= t('upload_images')
       #images
         = f.simple_fields_for :images do |image|
           = render 'image_fields', f: image
         .links
           = link_to_add_association f, :images do
-            .btn.btn-primary.btn-sm Add Image
-      %h4 Upload Attachments
+            .btn.btn-primary.btn-sm= t('add_images')
+      %h4= t('upload_attachments')
       #attachments
         = f.simple_fields_for :attachments do |attachment|
           = render 'attachment_fields', f: attachment
         .links
           = link_to_add_association f, :attachments do
-            .btn.btn-primary.btn-sm Add Attachment
+            .btn.btn-primary.btn-sm= t('add_attachments')
       .action
-        = f.button :submit, 'Submit'
-        = link_to 'Cancle', customer_root_path, class: 'btn btn-default'
+        = f.button :submit, t('submit')
+        = link_to t('cancle'), customer_root_path, class: 'btn btn-default'
 
 - content_for :javascripts do
   :javascript
