--- a/app/views/admin/staffs/index.html.haml
+++ b/app/views/admin/staffs/index.html.haml
@@ -35,8 +35,7 @@
                 %td
                   %ul.nav.nav-stacked
                     - sales.assigned_service_requests.each do |s|
-                      %li
-                        = link_to "#{t('service_request.title')}： #{s.title}, #{t('service_request.state')}：#{s.state}", admin_service_request_path(s)
+                      %li= render 'admin/common/path_to_request_show', s: s
                 %td= sales.created_at.to_s(:simple_date)
 .row
   .col-md-12
@@ -59,6 +58,5 @@
                 %td
                   %ul.nav.nav-stacked
                     - tech.assigned_service_requests.each do |s|
-                      %li
-                        = link_to "#{t('service_request.title')}： #{s.title}, #{t('service_request.state')}：#{s.state}", admin_service_request_path(s)
+                      %li= render 'admin/common/path_to_request_show', s: s
                 %td= tech.created_at.to_s(:simple_date)
