--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -7,4 +7,4 @@
       = f.input :password, input_html: {class: 'form-control'}
       = f.input :password_confirmation, input_html: {class: 'form-control'}
       = f.input :role, as: :radio_buttons, collection: User.available_role_names, checked: :sales
-      = f.button :submit, t('sign_up')
+      = f.button :submit, t('sign_up'), data: { disable_with: t('please_wait') }
