--- a/app/views/service_requests/_show.html.haml
+++ b/app/views/service_requests/_show.html.haml
@@ -64,7 +64,7 @@
             .col-md-12.assignment-form
               = simple_form_for [current_user, @service_request], url: update_assignment_admin_service_request_path(@service_request), method: 'POST', label: false do |f|
                 = f.association :responsibles, as: :check_boxes, label_method: :username, collection: User.sales + User.teches, include_hidden: false, label: 'Change assignment'
-                = f.button :submit, 'Update Assignment'
+                = f.button :submit, t('update_assignment'), data: { disable_with: t('please_wait') }
 .row
   .col-md-10
     .box
@@ -82,14 +82,21 @@
       .box-body
         - @service_request.attachments.each do |attachment|
           = link_to File.basename(attachment.file_path.path), attachment.file_path.url, target: '_blank'
-.row
-  .col-md-10
-    .box
-      .box-body
-        = simple_form_for [@service_request, Comment.new] do |f|
-          .row
-            .col-md-10
-              = f.input :body, input_html: {class: 'form-control', rows: 6}, label: false
-            .col-md-2
-              = f.button :submit, class: 'btn btn-warning'
+- unless @service_request.close?
+  .row
+    .col-md-10
+      .box
+        .box-body
+          = simple_form_for [@service_request, @comment] do |f|
+            .row
+              .col-md-10
+                = f.input :body, input_html: {class: 'form-control', rows: 6}, label: false
+                #comment_documents
+                  = f.simple_fields_for :comment_documents do |comment_document|
+                    = render 'comments/comment_document_fields', f: comment_document
+                  .links
+                    = link_to_add_association f, :comment_documents, partial: 'comments/comment_document_fields' do
+                      .btn.btn-primary.btn-sm= t('add_comment_documents')
+              .col-md-2
+                = f.button :submit, t('submit_comment'), class: 'btn btn-warning', data: { disable_with: t('please_wait') }
 = render 'service_requests/comments', comments: @comments
