--- a/app/views/common/_sidebar.html.haml
+++ b/app/views/common/_sidebar.html.haml
@@ -4,6 +4,7 @@
       %li.header= t('control_panel')
       - if current_user.admin?
         %li= link_to "#{t('add_new_user')}", new_user_path
+        %li= link_to "#{t('category_list')}", admin_categories_path
         %li= link_to "#{t('requests_list')}", admin_root_path
         %li= link_to "#{t('staffs_list')}", admin_staffs_path
         %li= link_to "#{t('customer_list')}", admin_customers_path
