--- a/app/views/common/_sidebar.html.haml
+++ b/app/views/common/_sidebar.html.haml
@@ -1,15 +1,19 @@
 .main-sidebar
   .sidebar
     %ul.nav.sidebar-menu
-      %li.header= t('control_panel')
       - if current_user.admin?
-        %li= link_to "#{t('add_new_user')}", new_user_path
+        %li.header=  t('sidebar.manage_category')
         %li= link_to "#{t('category_list')}", admin_categories_path
+        %li.header=  t('sidebar.manage_service_request')
         %li= link_to "#{t('requests_list')}", admin_root_path
+        %li.header=  t('sidebar.manage_user')
+        %li= link_to "#{t('add_new_user')}", new_user_path
         %li= link_to "#{t('staffs_list')}", admin_staffs_path
         %li= link_to "#{t('customer_list')}", admin_customers_path
       - if current_user.sales? or current_user.tech?
+        %li.header=  t('sidebar.manage_service_request')
         %li= link_to "#{t('requests_list')}", staff_root_path
       - if current_user.customer?
+        %li.header=  t('sidebar.manage_service_request')
         %li= link_to "#{t('service_request.add')}", new_customer_service_request_path
         %li= link_to "#{t('requests_list')}", customer_root_path
