--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -33,4 +33,4 @@
                   = link_to t('service_request.check_detail'), [role, sr]
                   - if current_user.customer? && !sr.close?
                     = link_to t('edit'), edit_customer_service_request_path(sr)
-                    = link_to t('delete'), customer_service_request_path(sr), method: 'DELETE'
+                    = link_to t('delete'), customer_service_request_path(sr), method: 'DELETE', data: { confirm: t('delete_confirm')}
