--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,10 +1,15 @@
 .row
-  .col-sm-4.col-sm-offset-4
+  .col-md-4.col-md-offset-4
     %h1.text-center= t('sign_up')
     %hr
-    = simple_form_for User.new do |f|
+    = simple_form_for [:admin, User.new] do |f|
       = f.input :username, input_html: {class: 'form-control'}
       = f.input :password, input_html: {class: 'form-control'}
       = f.input :password_confirmation, input_html: {class: 'form-control'}
       = f.input :role, as: :radio_buttons, collection: User.available_role_names, checked: :sales
       = f.button :submit, t('sign_up'), data: { disable_with: t('please_wait') }
+    %hr
+    / = link_to t('cancle'), root_path, class: 'btn btn-default'
+    = link_to t('staffs_list'), admin_staffs_path, class: 'btn btn-warning'
+    = link_to t('customer_list'), admin_customers_path, class: 'btn btn-warning'
+    = link_to t('to_main_page'), root_path, class: 'btn btn-warning'
