--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = stylesheet_link_tag    'application'
     %link(href="https://fonts.googleapis.com/earlyaccess/notosanstc.css" rel="stylesheet" type="text/css")
     %link(href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css")
+    %meta{:content => "width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no", :name => "viewport"}
+    %meta{name: "text:Google Basic Font", content: "Noto Sans TC"}
     = csrf_meta_tags
   %body.skin-blue
     = render 'common/navigation'
