modify asper robert comment

--- a/app/assets/stylesheets/common/common.sass
+++ b/app/assets/stylesheets/common/common.sass
@@ -9,3 +9,12 @@
   margin-bottom: 10px
 .category-item
   font-size: 20px
+.sidebar-menu
+  .header
+    font-size: 18px !important
+    font-weight: 700 !important
+    color: black !important
+  .item
+    a
+      font-weight: normal !important
+    
