--- a/app/views/common/_sidebar.html.haml
+++ b/app/views/common/_sidebar.html.haml
@@ -3,17 +3,28 @@
     %ul.nav.sidebar-menu
       - if current_user.admin?
         %li.header=  t('sidebar.manage_category')
-        %li= link_to "#{t('category_list')}", admin_categories_path
+        %li.item= link_to "#{t('category_list')}", admin_categories_path
         %li.header=  t('sidebar.manage_service_request')
-        %li= link_to "#{t('requests_list')}", admin_root_path
+        %li.item= link_to "#{t('all_requests_list')}", admin_root_path
+        %li.item= link_to "#{t('initial_requests_list')}", admin_root_path(state: 'initial')
+        %li.item= link_to "#{t('processing_requests_list')}", admin_root_path(state: 'processing')
+        %li.item= link_to "#{t('complete_requests_list')}", admin_root_path(state: 'complete')
+        %li.item= link_to "#{t('close_requests_list')}", admin_root_path(state: 'close')
         %li.header=  t('sidebar.manage_user')
-        %li= link_to "#{t('add_new_user')}", new_admin_user_path
-        %li= link_to "#{t('staffs_list')}", admin_staffs_path
-        %li= link_to "#{t('customer_list')}", admin_customers_path
+        %li.item= link_to "#{t('add_new_user')}", new_admin_user_path
+        %li.item= link_to "#{t('staffs_list')}", admin_staffs_path
+        %li.item= link_to "#{t('customer_list')}", admin_customers_path
+        %li.header 客訴單分析
+        %li.item.disabled= link_to "依客戶", '#'
+        %li.item.disabled= link_to "依問題分類", '#'
+        %li.item.disabled= link_to "依員工", '#'
       - if current_user.sales? or current_user.tech?
         %li.header=  t('sidebar.manage_service_request')
-        %li= link_to "#{t('requests_list')}", staff_root_path
+        %li.item= link_to "#{t('requests_list')}", staff_root_path
       - if current_user.customer?
         %li.header=  t('sidebar.manage_service_request')
-        %li= link_to "#{t('service_request.add')}", new_customer_service_request_path
-        %li= link_to "#{t('requests_list')}", customer_root_path
+        %li.item= link_to "#{t('service_request.add')}", new_customer_service_request_path
+        %li.item= link_to "#{t('requests_list')}", customer_root_path
+      %li.header 客訴單查詢
+      %li.item.disabled= link_to "依客戶", '#'
+      %li.item.disabled= link_to "依問題分類", '#'
