--- a/app/views/customer/service_requests/_form.html.haml
+++ b/app/views/customer/service_requests/_form.html.haml
@@ -5,7 +5,7 @@
       = f.input :equipment_id, input_html: {class: 'form-control'}, required: true
       = f.association :category, include_hidden: false, include_blank: false, input_html: {class: 'form-control'}
       = f.input :description,as: :text, input_html: {class: 'form-control', rows: 10}, required: true
-      = f.input :deadline, as: :date_time_picker, input_html: {class: 'form-control col-md-3 datepicker'}, required: true
+      / = f.input :deadline, as: :date_time_picker, input_html: {class: 'form-control col-md-3 datepicker'}, required: true
       %h4= t('upload_images')
       #images
         = f.simple_fields_for :images do |image|
@@ -24,9 +24,9 @@
         = f.button :submit, t('submit'), data: { disable_with: t('please_wait') }
         = link_to t('cancle'), customer_root_path, class: 'btn btn-default'
 
-- content_for :javascripts do
-  :javascript
-    $(document).ready(function(){
-      $('.datepicker').datepicker();
-      // $('.inline-picker').datepicker();
-    });
+/ - content_for :javascripts do
+/   :javascript
+/     $(document).ready(function(){
+/       $('.datepicker').datepicker();
+/       $('.inline-picker').datepicker();
+/     });
