--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,6 +4,7 @@
     %hr
     = simple_form_for [:admin, User.new] do |f|
       = f.input :username, input_html: {class: 'form-control'}
+      = f.input :email, as: :email, input_html: {class: 'form-control'}
       = f.input :password, input_html: {class: 'form-control'}
       = f.input :password_confirmation, input_html: {class: 'form-control'}
       = f.input :role, as: :radio_buttons, collection: User.available_role_names, checked: :sales
