send reset password mail after admin create a new user

--- a/app/views/devise/mailer/reset_password_instructions.html.haml
+++ b/app/views/devise/mailer/reset_password_instructions.html.haml
@@ -1,6 +1,12 @@
 %p
-  Hello #{@resource.email}!
-%p Someone has requested a link to change your password. You can do this through the link below.
-%p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token)
-%p If you didn't request this, please ignore this email.
+  Hello #{@resource.username}!
+%p 
+  This is the system instruction from
+  %strong= Setting.app_name
+%p Our system administrator just register a new account for you.
+%p 
+  Your user name is
+  %strong= @resource.username
+%p Please click below link to reset your password.
+%p= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token, user_id: @resource.id)
 %p Your password won't change until you access the link above and create a new one.
