--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -1,6 +1,6 @@
 .row
   .col-sm-4.col-sm-offset-4
-    %h2.text-center Change your password
+    %h2.text-center= "Please change your password"
     = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
       = devise_error_messages!
       = f.hidden_field :reset_password_token
