--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,10 +3,10 @@
     %h1.text-center= t('sign_up')
     %hr
     = simple_form_for [:admin, User.new] do |f|
-      = f.input :username, input_html: {class: 'form-control'}
-      = f.input :email, as: :email, input_html: {class: 'form-control'}
-      = f.input :password, input_html: {class: 'form-control'}
-      = f.input :password_confirmation, input_html: {class: 'form-control'}
+      = f.input :username, input_html: {class: 'form-control'}, required: true
+      = f.input :email, as: :email, input_html: {class: 'form-control'}, required: true
+      = f.input :password, input_html: {class: 'form-control'}, required: true
+      = f.input :password_confirmation, input_html: {class: 'form-control'}, required: true
       = f.input :role, as: :radio_buttons, collection: User.available_role_names, checked: :sales
       = f.button :submit, t('sign_up'), data: { disable_with: t('please_wait') }
     %hr
