--- a/app/views/service_requests/_index.html.haml
+++ b/app/views/service_requests/_index.html.haml
@@ -38,7 +38,7 @@
                 %td= sr.assignments.blank? ? t('service_request.not_assigned') : sr.assignments.count
                 %td= sr.comments.blank? ? t('service_request.no_comments') : "#{sr.comments.count} #{t('comments.unit')}"
                 %td
-                  = link_to t('service_request.check_detail'), [role, sr]
+                  = link_to t('service_request.reply'), [role, sr]
                   - if current_user.customer? && !sr.close?
                     = link_to t('edit'), edit_customer_service_request_path(sr)
                     = link_to t('delete'), customer_service_request_path(sr), method: 'DELETE', data: { confirm: t('delete_confirm')}
