--- a/app/assets/stylesheets/common/simple_form.sass
+++ b/app/assets/stylesheets/common/simple_form.sass
@@ -22,3 +22,8 @@
   .radio
     display: inline-block
     margin-left: 25px
+  .field_with_errors
+    background-color: transparent
+    display: inline
+    .error
+      color: red
