add responsible table

--- a/app/views/common/_sidebar.html.haml
+++ b/app/views/common/_sidebar.html.haml
@@ -15,6 +15,7 @@
         %li.item= link_to "#{t('sales_list')}", admin_sales_index_path
         %li.item= link_to "#{t('tech_list')}", admin_techs_index_path
         %li.item= link_to "#{t('customer_list')}", admin_customers_path
+        %li.item= link_to "#{t('sidebar.responsible_table')}", responsible_table_admin_customers_path
         / %li.header 客訴單分析
         / %li.item.disabled= link_to "依客戶", '#'
         / %li.item.disabled= link_to "依問題分類", '#'
