--- a/app/views/common/_navigation.html.haml
+++ b/app/views/common/_navigation.html.haml
@@ -5,10 +5,10 @@
     .collapse.navbar-collapse.navbar-custom-menu
       %span.sr-only Toggle navigation
       %ul.nav.navbar-nav
-        - if I18n.locale != :'zh-TW'
-          %li= link_to '切換至中文', set_locale_home_index_path(locale: 'zh-TW')
-        - if I18n.locale != :en
-          %li= link_to 'Switch to English', set_locale_home_index_path(locale: :en)
+        %li
+          = simple_form_for :languages, url: set_locale_home_index_path, html: {class: 'navbar-form'} do |f|
+            = f.input :locale, collection: Languages.array, include_blank: false, input_html: {class: 'form-control'}, label: false, selected: session[:locale]
+            = f.submit t('set_locale'), class: 'btn btn-default'
         - if user_signed_in?
           %li.dropdown
             %a.dropdown-toggle(href="#" data-toggle="dropdown" role="button" aria-expanded="false")
